# oxidrive

./: .dockerignore  .env  .envrc  .gitignore  .pre-commit-config.json  CODEOWNERS  CONTRIBUTING.md  Cargo.toml  Dockerfile  Justfile  LICENSE  README.md  bacon.toml  biome.jsonc  default.nix  docker-compose.yml  flake.nix  go.mod  go.sum  lefthook.yml  lychee.toml  openapi.json  oxidrive.yaml  package-lock.json  package.json  rust-toolchain.toml
app/accounts/: Cargo.toml  build.rs
app/accounts/cedar/: accounts.cedarschema  allow_all_on_owned.cedar
app/accounts/src/: account.rs  auth.rs  lib.rs  login.rs  pat.rs  session.rs  setup.rs
app/accounts/src/account/: credentials.rs
app/accounts/src/account/credentials/: store.rs
app/accounts/src/account/store/: pg.rs  sqlite.rs
app/accounts/src/fixtures/postgres/: accounts.sql  pats.sql
app/accounts/src/fixtures/sqlite/: pats.sql  sessions.sql
app/accounts/src/pat/: service.rs  store.rs
app/accounts/src/pat/store/: pg.rs  sqlite.rs  tests.rs
app/accounts/src/session/: jobs.rs  service.rs  store.rs
app/accounts/src/session/store/: pg.rs  sqlite.rs  tests.rs
app/authorization/: Cargo.toml
app/authorization/src/: cedar.rs  lib.rs
app/authorization/src/cedar/: policies.rs  schema.rs
app/files/: Cargo.toml
app/files/cedar/: collections.cedarschema  files.cedarschema
app/files/src/: auth.rs  collection.rs  content_type.rs  file.rs  lib.rs  service.rs  tag.rs
app/files/src/collection/: jobs.rs  service.rs  store.rs
app/files/src/collection/jobs/: refresh_collection.rs  refresh_collections.rs
app/files/src/collection/service/: event.rs
app/files/src/collection/store/: pg.rs  sqlite.rs  tests.rs
app/files/src/file/: content.rs  event.rs  store.rs
app/files/src/file/content/: fs.rs  s3.rs  tests.rs
app/files/src/file/store/: pg.rs  sqlite.rs  tests.rs
app/files/src/fixtures/postgres/: files.sql
app/files/src/fixtures/sqlite/: collections.sql  files.sql
app/search/: Cargo.toml  build.rs
app/search/src/: query.rs  querylang.pest
app/tags/: Cargo.toml
app/tags/src/: lib.rs  tag.rs
app/tags/src/tag/: index.rs
app/tags/src/tag/index/: pg.rs  sqlite.rs  tests.rs
app/ui/: Cargo.toml  biome.json  package-lock.json  package.json  playwright.config.ts  stylelint.config.js  svelte.config.js
app/ui/src/: app.d.ts  app.html  lib.rs
app/ui/src/lib/: api.ts  openapi.ts  tags.spec.ts  tags.ts  utils.ts
app/ui/src/lib/components/: Button.svelte  Fab.svelte  FileActions.svelte  FileEdit.svelte  FileIcon.svelte  FilePreview.svelte  FilesGrid.svelte  FilesList.svelte  Filter.svelte  Loading.svelte  LoadingSpinner.svelte  NavMenu.svelte  Navbar.svelte  Popover.svelte  Tag.svelte  TagsInput.svelte  Toast.svelte
app/ui/src/lib/styles/: oxi.scss  preflight.css  styles.scss
app/ui/src/routes/: +error.svelte  +layout.svelte  +layout.ts  +page.svelte
app/ui/src/routes/(app)/: +layout.svelte  +layout.ts
app/ui/src/routes/(auth)/: +layout.svelte  +layout.ts
app/ui/translations/en/: errors.ftl
app/ui/translations/en/component/: navmenu.ftl  tags-input.ftl
app/ui/translations/en/page/: account-settings.ftl  collections.ftl  files.ftl  login.ftl
app/web/: Cargo.toml
app/web/src/: api.rs  auth.rs  cors.rs  csrf.rs  files.rs  headers.rs  lib.rs  paginate.rs  routes.rs  server.rs  session.rs  state.rs  ui.rs
app/web/src/api/: error.rs  v1.rs
app/web/src/api/v1/: accounts.rs  auth.rs  collections.rs  files.rs  pats.rs
app/web/src/api/v1/files/: get.rs  (+4 more)
app/web/src/auth/: session.rs
app/web/src/files/: download.rs  upload.rs
lib/database/: Cargo.toml  build.rs
lib/database/src/: lib.rs  migrate.rs  paginate.rs
lib/pubsub/: Cargo.toml
lib/pubsub/src/: lib.rs
lib/telemetry/: Cargo.toml
lib/telemetry/src/: lib.rs  panic.rs
lib/workers/: Cargo.toml
lib/workers/src/: inmemory.rs  lib.rs  pg.rs  queue.rs  scheduler.rs  sqlite.rs  worker.rs
web/: .gitignore  Cargo.toml  Dioxus.toml  Justfile  biome.jsonc  build.rs  index.html  package-lock.json  package.json  svelte.config.js  tailwind.config.js  vite.config.ts
web/api/: Cargo.toml
web/api/src/: files.rs  instance.rs  lib.rs  list.rs  models.rs  sessions.rs
web/api/src/models/: credentials.rs  error.rs  file.rs  file_list.rs  file_upload_response.rs  instance_setup_request.rs  instance_setup_request_admin.rs  instance_setup_response.rs  instance_status.rs  instance_status_status.rs  list_info.rs  password_credentials.rs  session.rs  session_request.rs
web/app/: Cargo.toml  Dioxus.toml  index.html  input.css  package-lock.json  package.json  rust-toolchain.toml  tailwind.config.js
web/app/.cargo/: config.toml
web/app/src/: api.rs  auth.rs  component.rs  i18n.rs  instance.rs  layout.rs  lib.rs  main.rs  page.rs  route.rs  storage.rs  toast.rs
web/app/src/component/: button.rs  input.rs  loading.rs  logo.rs  navbar.rs  pane.rs  spinner.rs  title.rs
web/app/src/page/: files.rs  home.rs  login.rs  not_found.rs  setup.rs
web/e2e/: demo.test.ts
web/src/: app.d.ts  app.html  component.rs  lib.rs  main.rs
web/src/component/: button.rs  logo.rs
web/src/lib/: auth.ts  languages.ts  openapi.ts  paths.ts  tags.ts  upload.ts
web/src/lib/api/: index.ts  schema.d.ts
web/src/lib/components/: Button.svelte  DropdownMenu.svelte  Fab.svelte  FileActions.svelte  FilesGrid.svelte  FilesList.svelte  Loading.svelte  LoadingSpinner.svelte  Logo.svelte  NavMenu.svelte  Navbar.svelte  PageTitle.svelte  Popover.svelte  Toast.svelte
web/src/lib/styles/: _utils.scss
web/src/page/: home.rs
web/src/routes/: +layout.svelte  +layout.ts  +page.svelte  +page.ts
web/src/routes/(app)/: +layout.svelte  +layout.ts
web/src/routes/(auth)/: +layout.svelte
web/src/routes/(boxed)/: +layout.svelte
web/src/styles/: _components.scss  _reset.scss  _theme.scss  _typography.scss  styles.scss
web/src/styles/components/: _button.scss  _form.scss  _input.scss
web/static/: robots.txt
web/translations/en/component/: navbar.ftl
web/translations/en/page/: collections.ftl  files.ftl  new-collection.ftl  not-found.ftl  setup.ftl  toasts.ftl
(+412 files in other folders)
