[workspace]

resolver = "2"

members = ["app/*", "bin/*", "lib/*", "tools/*", "web"]

[workspace.package]
version = "0.1.0"
authors = ["Matteo Joliveau <matteo@matteojoliveau.com>"]
documentation = "https://oxidrive.github.io/oxidrive"
edition = "2021"

[workspace.dependencies]
# workspace
oxidrive-accounts.path = "app/accounts"
oxidrive-authorization.path = "app/authorization"
oxidrive-files.path = "app/files"
oxidrive-search.path = "app/search"
oxidrive-web.path = "app/web"

app.path = "lib/app"
oxidrive-config.path = "lib/config"
oxidrive-database.path = "lib/database"
oxidrive-domain.path = "lib/domain"
oxidrive-paginate.path = "lib/paginate"
oxidrive-telemetry.path = "lib/telemetry"
oxidrive-workers.path = "lib/workers"

oxidrive-web-assets.path = "web"

# crates.io
async-trait = "0.1"
argon2 = { version = "0.5", features = ["std"] }
assert2 = "0.3"
async-graphql-axum = "7.0"
axum = "0.8"
axum-extra = "0.10"
base64 = "0.22"
bytes = "1"
bytesize = "1"
cedar-policy = "4"
clap = "4"
eyre = "0.6"
fake = { version = "2.9", features = ["chrono", "uuid"] }
figment = "0.10"
futures = "0.3"
infer = "0.16"
miette = "7"
mime_guess = "2"
mockall = "0.13"
pasetors = "0.7"
pest = "2"
pest_derive = "2"
rand = "0.8"
rstest = "0.22"
rust-embed = "8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = [
    "chrono",
    "json",
    "macros",
    "postgres",
    "sqlite",
    "uuid",
] }
strum = { version = "0.26", features = ["derive"] }
tempfile = "3"
thiserror = "1"
tokio = "1"
tokio-util = "0.7"
tower = "0.5"
tower-http = "0.5"
tower-surf = "0.3"
tracing = "0.1"
tracing-subscriber = "0.3"
url = { version = "2", features = ["serde"] }
utoipa = "5"
utoipa-axum = "0.1"
utoipa-swagger-ui = "8"
uuid = { version = "1", features = ["v7", "serde"] }
