[package]
name = "oxidrive"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]

dioxus = { workspace = true, features = ["web", "router"] }

# Debug
log = { workspace = true }
dioxus-logger = { workspace = true }
console_error_panic_hook = { workspace = true }
