[package]
name = "oxidrive-accounts"
version.workspace = true
authors.workspace = true
documentation.workspace = true
edition.workspace = true

[features]
fixtures = ["dep:fake", "dep:rstest"]

[dependencies]
oxidrive-authorization = { workspace = true }

app = { workspace = true }
oxidrive-database = { workspace = true }
oxidrive-domain = { workspace = true }

argon2 = { workspace = true }
async-trait = { workspace = true }
cedar-policy = { workspace = true }
rand = { workspace = true }
rust-embed = { workspace = true, features = ["include-exclude"] }
serde = { workspace = true }
sqlx = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
uuid = { workspace = true }

fake = { workspace = true, optional = true }
rstest = { workspace = true, optional = true }

[dev-dependencies]
assert2 = { workspace = true }
fake = { workspace = true }
rstest = { workspace = true }
sqlx = { workspace = true, features = ["migrate"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
