[package]
name = "oxidrive-files"
version.workspace = true
authors.workspace = true
documentation.workspace = true
edition.workspace = true
license.workspace = true

[features]
fixtures = ["dep:fake", "dep:rstest", "oxidrive-accounts/fixtures"]

[dependencies]
oxidrive-accounts = { workspace = true }
oxidrive-authorization = { workspace = true }
oxidrive-search = { workspace = true }

app = { workspace = true }
oxidrive-database = { workspace = true }
oxidrive-domain = { workspace = true }
oxidrive-paginate = { workspace = true }
oxidrive-pubsub = { workspace = true }
oxidrive-workers = { workspace = true }

async-trait = { workspace = true }
blake3 = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }
globset = { workspace = true }
infer = { workspace = true }
mime_guess = { workspace = true }
mockall = { workspace = true }
opendal = { workspace = true, features = ["services-fs", "services-s3"] }
rust-embed = { workspace = true, features = ["include-exclude"] }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["fs"] }
tokio-util = { workspace = true, features = ["codec"] }
tracing = { workspace = true }
uuid = { workspace = true }

fake = { workspace = true, optional = true }
rstest = { workspace = true, optional = true }

[dev-dependencies]
oxidrive-accounts = { workspace = true, features = ["fixtures"] }

assert2 = { workspace = true }
fake = { workspace = true }
rstest = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
