[package]
name = "oxidrive-tags"
version.workspace = true
authors.workspace = true
documentation.workspace = true
edition.workspace = true


[dependencies]
oxidrive-files = { workspace = true }

app = { workspace = true }
oxidrive-database = { workspace = true }
oxidrive-domain = { workspace = true }

async-trait = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
sqlx = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
uuid = { workspace = true }

[dev-dependencies]
oxidrive-auth = { workspace = true, features = ["fixtures"] }
oxidrive-files = { workspace = true, features = ["fixtures"] }

assert2 = { workspace = true }
fake = { workspace = true }
rstest = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
