[package]
name = "oxidrive-ui"
version.workspace = true
authors.workspace = true
documentation.workspace = true
edition.workspace = true
license.workspace = true

[features]
vite-dev-server = ["dep:vite-rs", "dep:tokio"]

[dependencies]
app = { workspace = true }

tracing = { workspace = true }
rust-embed = { workspace = true }
vite-rs = { workspace = true, optional = true }
tokio = { workspace = true, optional = true, features = ["rt"] }