[package]
name = "oxidrive-web"
version.workspace = true
authors.workspace = true
documentation.workspace = true
edition.workspace = true

[dependencies]
oxidrive-auth = { workspace = true }
oxidrive-files = { workspace = true }
    
app = { workspace = true }
oxidrive-paginate = { workspace = true }

oxidrive-web-assets = { workspace = true }

axum = { workspace = true, features = ["macros", "multipart"] }
axum-extra = { workspace = true, features = ["typed-header", "cookie", "cookie-signed", "file-stream"] }
base64 = { workspace = true }
futures = { workspace = true }
mime_guess = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["net"] }
