[package]
name = "oxidrive-web"
version.workspace = true
authors.workspace = true
documentation.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
oxidrive-accounts = { workspace = true }
oxidrive-authorization = { workspace = true }
oxidrive-files = { workspace = true }
oxidrive-ui = { workspace = true }

app = { workspace = true }
oxidrive-paginate = { workspace = true }

axum = { workspace = true, features = ["macros", "multipart"] }
axum-extra = { workspace = true, features = [
    "cookie",
    "cookie-signed",
    "file-stream",
    "query",
    "typed-header",
] }
base64 = { workspace = true }
bytesize = { workspace = true, features = ["serde"] }
futures = { workspace = true }
mime_guess = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true, features = ["serde"] }
tokio = { workspace = true, features = ["net"] }
tower = { workspace = true, features = ["util"] }
tower-http = { workspace = true, features = [
    "catch-panic",
    "cors",
    "set-header",
    "trace",
] }
tower-surf = { workspace = true, features = ["axum"] }
tracing = { workspace = true }
url = { workspace = true }
utoipa = { workspace = true, features = ["uuid", "axum_extras"] }
utoipa-axum = { workspace = true }
utoipa-swagger-ui = { workspace = true, features = ["axum", "vendored"] }
uuid = { workspace = true }
