[package]
name = "oxidrive-database"
version.workspace = true
authors.workspace = true
documentation.workspace = true
edition.workspace = true

[dependencies]
app = { workspace = true }
serde = { workspace = true }
sqlx = { workspace = true, features = ["runtime-tokio"] }
tracing = { workspace = true }
url = { workspace = true }
