[package]
name = "oxidrive-pubsub"
version.workspace = true
authors.workspace = true
documentation.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
futures = { workspace = true }
pin-project-lite = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
tokio-stream = { workspace = true, features = ["sync"] }
tracing = { workspace = true }
