[package]
name = "oxidrive_api"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
chrono = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
strum = { workspace = true }
reqwest = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
assert2 = { workspace = true }
env_logger = { workspace = true }
mockito = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
