[package]
name = "oxidrive"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
oxidrive_api = { workspace = true }

chrono = { workspace = true }
console_error_panic_hook = { workspace = true }
dioxus = { workspace = true, features = ["web", "router"] }
dioxus-free-icons = { workspace = true, features = ["font-awesome-brands", "font-awesome-regular", "font-awesome-solid"] }
dioxus-logger = { workspace = true }
fluent-bundle = { workspace = true }
fluent-langneg = { workspace = true }
gloo-storage = { workspace = true }
gloo-timers = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
strum = { workspace = true }
thiserror = { workspace = true }
unic-langid = { workspace = true }
wasm-bindgen = { workspace = true }
web-sys = { workspace = true, features = ["Document", "Element", "Event", "EventTarget", "Window", "Navigator", "Location"] }

[dev-dependencies]
assert2 = { workspace = true }
rstest = { workspace = true }